--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: objective-c
-osx_image: xcode8
-
+osx_image: xcode8.3
 env:
-  - ACTION=test PLATFORM=iOS  DESTINATION='platform=iOS Simulator,name=iPhone 6S' UUID='7FC06F6D-AF72-4B38-9A96-1F934EA2E27F'
-  - ACTION=test PLATFORM=tvOS DESTINATION='platform=tvOS Simulator,name=Apple TV 1080p' UUID='0DF1B136-A3A7-4C51-AE6E-CFEFDF52DA24'
-
+  - PLATFORM=iOS NAME='iPhone SE'
+  - PLATFORM=tvOS NAME='Apple TV 1080p'
+before_install:
+  - export UUID=$(instruments -s | ruby -e "ARGF.each_line{ |ln| ln =~ /$NAME .* \[(.*)\]/; if \$1; puts(\$1); exit; end }");
 install:
   - carthage bootstrap --platform $PLATFORM
-
 script:
-  - if [ -n "$UUID" ]; then xcrun instruments -w "$UUID" || true; sleep 15; fi
-  - set -o pipefail && xcodebuild -scheme PMKPhotos -destination "$DESTINATION" $ACTION | xcpretty
+  - set -o pipefail;
+    open -a "simulator" --args -CurrentDeviceUDID "$UUID";
+    xcodebuild -scheme PMKPhotos -destination "id=$UUID" test | xcpretty;;
