--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: objective-c
 osx_image: xcode8.3
+matrix:
+  include:
+    - osx_image: xcode8
+    - osx_image: xcode8.1
+    - osx_image: xcode8.2
+    - osx_image: xcode9
 env:
   - PLATFORM=iOS NAME='iPhone SE'
   - PLATFORM=tvOS NAME='Apple TV 1080p'
@@ -10,4 +16,4 @@ install:
 script:
   - set -o pipefail;
     open -a "simulator" --args -CurrentDeviceUDID "$UUID";
-    xcodebuild -scheme PMKPhotos -destination "id=$UUID" test | xcpretty;;
+    xcodebuild -scheme PMKPhotos -destination "id=$UUID" test | xcpretty
