--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ matrix:
 cache:
   directories:
   - Carthage
+before_install:
+  - carthage bootstrap --cache-builds --no-use-binaries --platform $PLAT --verbose
 install:
-  - carthage bootstrap --cache-builds --no-use-binaries --platform $PLAT
+  - xcodebuild -scheme PMKPhotos -quiet -destination "$DST" build-for-testing SWIFT_VERSION=$SWFT
 script:
-  - set -o pipefail
-  - xcodebuild -scheme PMKPhotos -quiet -destination "$DST" build SWIFT_VERSION=$SWFT
   - xcodebuild -scheme PMKPhotos -quiet -destination "$DST" test
