--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,26 @@ matrix:
     - {osx_image: xcode9.2,  env: 'PLAT=iOS   SWFT=3.2  DST="OS=11.2,name=iPhone SE"'}
     - {osx_image: xcode9.2,  env: 'PLAT=tvOS  SWFT=3.2  DST="OS=11.2,name=Apple TV"'}
 
+    - {osx_image: xcode9.4,  env: 'PLAT=iOS   SWFT=3.3  DST="OS=11.4,name=iPhone 5s"'}
+    - {osx_image: xcode9.4,  env: 'PLAT=tvOS  SWFT=3.3  DST="OS=11.4,name=Apple TV"'}
+
     - {osx_image: xcode9.2,  env: 'PLAT=iOS   SWFT=4.0  DST="OS=11.2,name=iPhone SE"'}
     - {osx_image: xcode9.2,  env: 'PLAT=tvOS  SWFT=4.0  DST="OS=11.2,name=Apple TV"'}
+
+    - {osx_image: xcode9.4,  env: 'PLAT=iOS   SWFT=4.1  DST="OS=11.4,name=iPhone 5s"'}
+    - {osx_image: xcode9.4,  env: 'PLAT=tvOS  SWFT=4.1  DST="OS=11.4,name=Apple TV"'}
+
 cache:
   directories:
   - Carthage
 before_install:
   - carthage bootstrap --cache-builds --no-use-binaries --platform $PLAT --verbose
 install:
-  - xcodebuild -scheme PMKPhotos -quiet -destination "$DST" build-for-testing SWIFT_VERSION=$SWFT
+  - xcodebuild -scheme PMKPhotos -target PMKPhotos -quiet -destination "$DST" build SWIFT_VERSION=$SWFT SWIFT_TREAT_WARNINGS_AS_ERRORS=YES
+  - if [[ $TEST == "1" ]]; then
+      xcodebuild -scheme PMKPhotos -target PMKPHTests -quiet -destination "$DST" build;
+    fi
 script:
-  - xcodebuild -scheme PMKPhotos -quiet -destination "$DST" test
+  - if [[ $TEST == "1" ]]; then
+      xcodebuild -scheme PMKPhotos -quiet -destination "$DST" test;
+    fi
