--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,17 @@ matrix:
     - {osx_image: xcode9.4,  env: 'PLAT=iOS   SWFT=3.3  DST="OS=11.4,name=iPhone 5s"'}
     - {osx_image: xcode9.4,  env: 'PLAT=tvOS  SWFT=3.3  DST="OS=11.4,name=Apple TV"'}
 
+    - {osx_image: xcode10,   env: 'PLAT=iOS   SWFT=3.4  DST="OS=12.0,name=iPhone SE"'}
+    - {osx_image: xcode10,   env: 'PLAT=tvOS  SWFT=3.4  DST="OS=12.0,name=Apple TV"'}
+
     - {osx_image: xcode9.2,  env: 'PLAT=iOS   SWFT=4.0  DST="OS=11.2,name=iPhone SE"'}
     - {osx_image: xcode9.2,  env: 'PLAT=tvOS  SWFT=4.0  DST="OS=11.2,name=Apple TV"'}
 
-    - {osx_image: xcode9.4,  env: 'PLAT=iOS   SWFT=4.1  DST="OS=11.4,name=iPhone 5s"'}
-    - {osx_image: xcode9.4,  env: 'PLAT=tvOS  SWFT=4.1  DST="OS=11.4,name=Apple TV"'}
+    - {osx_image: xcode9.4,  env: 'PLAT=iOS   SWFT=4.1  DST="OS=11.4,name=iPhone 5s"  TEST=1'}
+    - {osx_image: xcode9.4,  env: 'PLAT=tvOS  SWFT=4.1  DST="OS=11.4,name=Apple TV"   TEST=1'}
+
+    - {osx_image: xcode10,   env: 'PLAT=iOS   SWFT=4.2  DST="OS=12.0,name=iPhone SE"'}
+    - {osx_image: xcode10,   env: 'PLAT=tvOS  SWFT=4.2  DST="OS=12.0,name=Apple TV"'}
 
 cache:
   directories:
